updated strings with translations

--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -9,15 +9,16 @@
         android:id="@+id/main_layout_notes_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="left"
+        android:gravity="start"
         android:padding="0dp"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/note_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
             android:padding="5dp"
-            android:text="Note"/>
+            android:text="Note"
+            android:textSize="25sp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
