--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -11,15 +11,15 @@
         android:id="@+id/ll_main_layout_add_report"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="left"
+        android:gravity="start"
         android:orientation="vertical"
         android:padding="25dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nota"
-            android:textSize="25dp" />
+            android:text="@string/note_placeholder"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/addNote"
@@ -30,12 +30,12 @@
             android:id="@+id/save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save" />
+            android:text="@string/save_btn" />
 
         <Button
             android:id="@+id/backToList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Back" />
+            android:text="@string/back_btn" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
