--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -26,6 +26,7 @@
         android:focusable="true"
         android:src="@drawable/baseline_add_24"
         android:tint="@android:color/white"
+        app:backgroundTint="@color/peachy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
